Added new loadFromConfig and saveToConfig to ItemComponent
Updated CustomItemLoader and RegistryConfigHandler to loop through Components and use new Load and Save methods instead of having giant if, else if checks.